--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
+  "recommendations": [
+    "Vue.vscode-typescript-vue-plugin",
+    "devsense.phptools-vscode",
+    "devsense.profiler-php-vscode"
+  ]
 }
